--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,14 +34,14 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #28c6ac,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
 );
 
-$toolbar-background: #488aff;
+$toolbar-background: #28c6ac;
 $toolbar-border-color: #123456;
 $toolbar-text-color: #123456;
 $toolbar-active-color: #123456;
