--- a/src/pages/add-point/add-point.scss
+++ b/src/pages/add-point/add-point.scss
@@ -1,3 +1,10 @@
 page-add-point {
-
+  .flex-container{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+ .flex-center{
+   max-width: 50%;
+ }
 }
