--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,8 +3,17 @@
 
 // Font path is used to include ionicons,
 // roboto, and noto sans fonts
-$font-path: "../assets/fonts";
 
+$font-path: "../assets/fonts";
+@font-face {
+  font-family: "Battambang";
+  src: url("../assets/fonts/Battambang-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Battambang-Bold";
+  src: url("../assets/fonts/Battambang-Bold.ttf");
+}
 
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
@@ -35,7 +44,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #28c6ac,
-  secondary:  #32db64,
+  secondary:  #5599d1,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
@@ -46,6 +55,8 @@ $toolbar-border-color: #123456;
 $toolbar-text-color: #123456;
 $toolbar-active-color: #123456;
 $toolbar-inactive-color: #123456;
+
+$font-family-base: "Battambang", sans-serif !default;
 
 // App iOS Variables
 // --------------------------------------------------
