--- a/src/components/store-modal/store-modal.scss
+++ b/src/components/store-modal/store-modal.scss
@@ -1,3 +1,10 @@
 store-modal {
-
+ .flex-container{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+ .flex-center{
+   max-width: 50%;
+ }
 }
