--- a/src/components/store-modal/store-modal.html
+++ b/src/components/store-modal/store-modal.html
@@ -8,7 +8,7 @@
     </ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="dismiss()">
-        <ion-icon name="ios-close"></ion-icon>
+        <ion-icon name="md-close"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -16,24 +16,38 @@
 <ion-content>
   <ion-card>
     <ion-item>
-      ឈុតចាំបាច់សំរាប់តាំង
+      {{display?.name}}
     </ion-item>
-    <img src="{{imgSrc}}" (click)="getPicture()">
+    <!-- <img src="{{pathForImage(display?.imageUrl)}}" (click)="getPicture()"> -->
+    <img src="{{display?.imageUrl}}" (click)="getPicture()">
     <ion-item>
-        <div padding class="flex-container">
-          <h1 class="points" color="flex-center">{{points}} ពិន្ទុ</h1>
-        </div>
-      </ion-item>
+      <div padding class="flex-container">
+        <h1 class="points" color="flex-center">{{display?.points}} ពិន្ទុ</h1>
+      </div>
+    </ion-item>
     <ion-item>
-      <ion-range min="0" step="10" snaps="true" [(ngModel)]="points">
-        <ion-label range-left class="small-text">0</ion-label>
-        <ion-label range-right>1800</ion-label>
+      <ion-range min="0" step="100" max="{{maxPoint}}" snaps="true" [(ngModel)]="display.points">
+        <!-- <ion-label range-left class="small-text">0</ion-label>
+        <ion-label range-right>{{store.points}}</ion-label> -->
       </ion-range>
     </ion-item>
   </ion-card>
 
-  <div padding>
-    <button ion-button round padding block (click)="save()">បញ្ជូន</button>
-  </div>
+  <div padding class="flex-container">
+    <button color="light" class="flex-center" ion-button icon-start round padding icon-only (click)="getPicture()">
+     <ion-icon name="camera"></ion-icon>
+   </button>
+ </div>
+
+ <div padding>
+  <button ion-button icon-start round padding block (click)="save()">
+   <ion-icon name="save"></ion-icon> បញ្ជូន
+ </button>
+</div>
+<!-- <div padding>
+  <button ion-button icon-start round padding block (click)="uploadImage()">
+   <ion-icon name="save"></ion-icon> Cloud
+ </button>
+</div> -->
 <input type="file" #imgFile style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage($event)" />
 </ion-content>
