--- a/src/components/store-modal/store-modal.html
+++ b/src/components/store-modal/store-modal.html
@@ -18,8 +18,8 @@
     <ion-item>
       {{display?.name}}
     </ion-item>
-    <!-- <img src="{{pathForImage(display?.imageUrl)}}" (click)="getPicture()"> -->
-    <img src="{{display?.imageUrl}}" (click)="getPicture()">
+    <img src="{{pathForImage(display?.imageUrl)}}" (click)="getPicture()">
+    <!-- <img src="{{display?.imageUrl}}" (click)="getPicture()"> -->
     <ion-item>
       <div padding class="flex-container">
         <h1 class="points" color="flex-center">{{display?.points}} ពិន្ទុ</h1>
