--- a/src/components/store-modal/store-modal.html
+++ b/src/components/store-modal/store-modal.html
@@ -16,7 +16,7 @@
 <ion-content>
   <ion-card>
     <ion-item>
-      {{display?.name}}
+      {{display?.name}} - SKU {{display?.sku}}
     </ion-item>
     <img src="{{pathForImage(display?.imageUrl)}}" (click)="getPicture()">
     <!-- <img src="{{display?.imageUrl}}" (click)="getPicture()"> -->
@@ -28,22 +28,28 @@
     <ion-item>
       <ion-range min="0" step="100" max="{{maxPoint}}" snaps="true" [(ngModel)]="display.points">
         <!-- <ion-label range-left class="small-text">0</ion-label>
-        <ion-label range-right>{{store.points}}</ion-label> -->
-      </ion-range>
-    </ion-item>
-  </ion-card>
+          <ion-label range-right>{{store.points}}</ion-label> -->
+        </ion-range>
+      </ion-item>
+      <ion-item>
+        <ion-label>លក្ខណ្ឌ</ion-label>
+        <ion-select [(ngModel)]="display.condition">
+          <ion-option *ngFor="let condition of conditionList" [value]="condition">{{condition.name}}</ion-option>
+        </ion-select>
+      </ion-item>
+    </ion-card>
 
-  <div padding class="flex-container">
-    <button color="light" class="flex-center" ion-button icon-start round padding icon-only (click)="getPicture()">
-     <ion-icon name="camera"></ion-icon>
+    <div padding class="flex-container">
+      <button color="light" class="flex-center" ion-button icon-start round padding icon-only (click)="getPicture()">
+       <ion-icon name="camera"></ion-icon>
+     </button>
+   </div>
+
+   <div padding>
+    <button ion-button icon-start round padding block (click)="save()">
+     <ion-icon name="save"></ion-icon> បញ្ជូន
    </button>
  </div>
-
- <div padding>
-  <button ion-button icon-start round padding block (click)="save()">
-   <ion-icon name="save"></ion-icon> បញ្ជូន
- </button>
-</div>
 <!-- <div padding>
   <button ion-button icon-start round padding block (click)="uploadImage()">
    <ion-icon name="save"></ion-icon> Cloud
