--- a/src/components/store-modal/store-modal.html
+++ b/src/components/store-modal/store-modal.html
@@ -19,7 +19,7 @@
       {{display?.name}} - SKU {{display?.sku}}
     </ion-item>
     <img src="{{pathForImage(display?.imageUrl)}}" (click)="getPicture()">
-    <!-- <img src="{{display?.imageUrl}}" (click)="getPicture()"> -->
+    <img src="{{display?.imageUrl}}" (click)="getPicture()">
     <ion-item>
       <div padding class="flex-container">
         <h1 class="points" color="flex-center">{{display?.points}} ពិន្ទុ</h1>
@@ -27,8 +27,6 @@
     </ion-item>
     <ion-item>
       <ion-range min="0" step="100" max="{{maxPoint}}" snaps="true" [(ngModel)]="display.points">
-        <!-- <ion-label range-left class="small-text">0</ion-label>
-          <ion-label range-right>{{store.points}}</ion-label> -->
         </ion-range>
       </ion-item>
       <ion-item>
@@ -50,6 +48,16 @@
      <ion-icon name="save"></ion-icon> បញ្ជូន
    </button>
  </div>
+ <ion-item *ngFor="let s of allDisplays">
+    <h2>id {{s.id}}</h2>
+    <h2>name {{s.name}}</h2>
+    <h2>points {{s.points}}</h2>
+    <h2>imageUrl {{s.imageUrl}}</h2>
+    <h2>status {{s.status}}</h2>
+    <h2>sku {{s.sku}}</h2>
+    <h2>displayTypeIdDisplays {{s.displayTypeIdDisplays}}</h2>
+    <h2>storeTypeIdDisplays {{s.storeTypeIdDisplays}}</h2>
+  </ion-item>
 
 <input type="file" #imgFile style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage($event)" />
 </ion-content>
