add reward list

--- a/src/pages/claim-reward-detail/claim-reward-detail.scss
+++ b/src/pages/claim-reward-detail/claim-reward-detail.scss
@@ -1,3 +1,10 @@
 page-claim-reward-detail {
-
+ .flex-container{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+ .flex-center{
+   max-width: 50%;
+ }
 }
